# rdpdk

./: .gitignore  Cargo.toml  README.md  rdpdk.rs
app/runpmd/: Cargo.toml  build.rs  runpmd.rs
app/runpmd/cmd_module/: cmd_module.rs
app/runpmd/cmd_module/flow/: flow.rs
app/runpmd/cmd_module/flow/attr/: attr.rs
app/runpmd/cmd_module/flow/items/: l2net.rs  l3net.rs
app/runpmd/cmd_module/port/: port.rs
app/runpmd/cmdline_utils/flow/: flow.rs
app/runpmd/cmdline_utils/flow/actions/: actions.rs
app/runpmd/cmdline_utils/flow/items/: items.rs  l2net.rs  (+1 more)
app/runpmd/cmdline_utils/port/: port.rs
buildtools/: rust-create-rawlib.sh
buildtools/rust.d/: ethdev_driver  rte_build_config  rte_eal  rte_ethdev  rte_lcore  rte_mbuf  rte_mbuf_core  rte_mempool
dpdk-patches/: 0001-rust-export-missing-port-objects.patch  0002-net-mlx5-refactor-Rx-Tx-functions-selection.patch  0002-rust-export-mlx5-Rx-functions.patch  0003-rust-export-mlx5-Tx-function.patch
examples/: echo.rs  helloworld.rs
lib/: lib.rs  port.rs  raw_port.rs
lib/cmdline/: cmdline.rs
lib/cmdline/arg/: arg.rs  arg_int.rs  arg_net.rs
lib/cmdline/param/: param.rs
lib/cmdline/utils/flow/: flow.rs
lib/cmdline/utils/port/: port.rs
lib/dpdk_raw/: dpdk_raw.rs  ethdev_driver.rs  rte_build_config.rs  rte_eal.rs  rte_ethdev.rs  rte_lcore.rs  rte_mbuf.rs  rte_mbuf_core.rs  rte_mempool.rs
lib/eal/: eal.rs
lib/port/: init.rs  port.rs  raw_port.rs
port/mlx5/: Cargo.toml  mlx5_port.rs
port/mlx5/mlx5.d/: mlx5  mlx5_rx  mlx5_tx
port/mlx5/mlx5_raw/: mlx5.rs  mlx5_raw.rs  mlx5_rx.rs  mlx5_tx.rs
(+5 files in other folders)
