[package]
name = "rdpdk"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-Ctarget-feature=+crt-static"]

[lib]
path = "rdpdk.rs"

[workspace]
members = [
    ".",
]

[dependencies]
tokio = { version = "1.44.2", features = ["sync"] }

[[example]]
name = "echo"
crate-type = ["bin"]

[[bin]]
name = "echo"
path = "examples/echo.rs"

