[package]
name = "rdpdk"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-Ctarget-feature=+crt-static"]

[lib]
path = "rdpdk.rs"

[workspace]
members = [
    ".",
]

[dependencies]
tokio = { version = "1.44.2", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
clap = "4.5.37"

[[example]]
name = "echo"
crate-type = ["bin"]

[[example]]
name = "helloworld"
crate-type = ["bin"]

[[bin]]
name = "echo"
path = "examples/echo.rs"

[[bin]]
name = "helloworld"
path = "examples/helloworld.rs"

